--- a/index.html
+++ b/index.html
@@ -4,9 +4,65 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>influence-gear</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+   
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>hello git push -u origin mainworld</h1>
+  <header>
+    <nav class="nav">
+     <h1 class="logo">influence products</h1>
+      <div class="menu">
+        <a href="">Home</a>
+        <a href="">Products</a>
+        <a href="">Sing up</a>
+        <a href="">Login</a>
+      </div>
+    </nav>
+    <div class="banner">
+      <div class="content">
+        <h1 class="banner-title">Start your Journey as <br>
+          Influencer</h1>
+        <p class="para-1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem <br> vestibulum sed scelerisque eros. Lectus faucibus.</p>
+        <button class="b-btn">Preebook now</button>
+      </div>
+      <div class="imge">
+        <img class="main-imge" width="560px" src="images/main-camera.png" alt="">
+        <img width="550px" src="images/Circle design.svg" alt="">
+      </div>
+    </div>
+  </header>
+  <main>
+    <div class="icon-sec">
+      <img class="logo-sec" src="logos/Alibaba.svg" alt="">
+      <img class="logo-sec" src="logos/Amazon.svg" alt="">
+      <img class="logo-sec" src="logos/Daraz.pk Logo.svg" alt="">
+      <img class="logo-sec" src="logos/Ebay.svg" alt="">
+      <img class="logo-sec" src="logos/Rakuten.svg" alt="">
+      <img class="logo-sec" src="logos/Walmart.svg" alt="">
+      <img class="logo-sec" src="logos/Target.svg" alt="">
+    </div>
+    <div class="product-section">
+      <div class="box1">
+        <img src="images/tripod.png" alt="">
+        <h1 class="box-tit">Flex Tripod</h1>
+        <h3>$50.48</h3>
+        <div class="revew">
+          <img src="images/Screenshot.png" alt="">
+          <h5>4.99</h5>
+        </div>
+        <h4>
+          Wordwide shifting <br> available <br>
+          Buyers protection possible!
+        </h4>
+      </div>
+    </div>
+
+  </main>
+  <footer>
+
+
+  </footer>
+
 </body>
 </html>
